--- a/test-network/organizations/cryptogen/crypto-config-org1.yaml
+++ b/test-network/organizations/cryptogen/crypto-config-org1.yaml
@@ -11,8 +11,8 @@ PeerOrgs:
   # ---------------------------------------------------------------------------
   # Org1
   # ---------------------------------------------------------------------------
-  - Name: Org1
-    Domain: org1.example.com
+  - Name: UniMadrid
+    Domain: uniMadrid.example.com
     EnableNodeOUs: true
     # ---------------------------------------------------------------------------
     # "Specs"
